Added plugin dependency handling. #31 Renamed args to parameters everywhere. It is longer, but at least not an abbreviation. #6 Fixed id checking code everywhere. Added some text to readme, fixed some example code, rewrote the introduction.

--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "type": "git",
     "url": "https://github.com/inf3rno/dflo2"
   },
-  "dependencies": {
-  },
+  "main": "df.js",
   "scripts": {
     "test": "jasmine"
+  },
+  "dependencies": {
   },
   "devDependencies": {
     "jasmine": ">=2.2.0"
