Decided not to use native class names like Object and Error. Renamed them to Base and UserError. Restructured almost everything. Split the code between the core and to the error.v8, pubsub and pubsub.fluent plugins. #42 #40

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "https://github.com/inf3rno/dflo2"
   },
-  "main": "df.js",
+  "main": "core.js",
   "scripts": {
     "test": "jasmine"
   },
