I decided to publish on npm and bower with 0.1.0. I think it's too early, but I don't want to think about a new name if somebody takes this one. #2

--- a/bower.json
+++ b/bower.json
@@ -9,15 +9,25 @@
     "data binding"
   ],
   "license": "MIT",
-  "author": "László Lajos Jánszky",
+  "authors": [
+    {
+      "name": "László Lajos Jánszky"
+    }
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/inf3rno/dataflower"
   },
-  "bugs": {
-    "url": "http://github.com/owner/project/issues"
-  },
   "main": "core.js",
+  "ignore": [
+    ".idea/",
+    "release/",
+    "node_modules/",
+    ".gitignore",
+    ".npmignore",
+    ".travis.yml",
+    "package.json"
+  ],
   "scripts": {
     "test": "jasmine"
   },
