--- a/package.json
+++ b/package.json
@@ -5,8 +5,18 @@
   "keywords": [
     "DataFlower",
     "dataflow",
+    "flow-based programming",
+    "async",
     "pub/sub",
-    "data binding"
+    "mediator",
+    "push/pull",
+    "req/rep",
+    "message bus",
+    "message queue",
+    "pipeline",
+    "stream",
+    "data binding",
+    "ES5"
   ],
   "license": "MIT",
   "author": "László Lajos Jánszky",
@@ -15,15 +25,32 @@
     "url": "https://github.com/inf3rno/dataflower"
   },
   "bugs": {
-    "url": "http://github.com/owner/project/issues"
+    "url": "https://github.com/inf3rno/dataflower/issues"
   },
-  "main": "core.js",
+  "main": "index.js",
   "scripts": {
-    "test": "jasmine"
+    "test": "npm run test-node & npm run test-karma",
+    "test-node": "mocha --reporter spec yadda.js",
+    "test-karma": "karma start karma.conf.js"
   },
   "dependencies": {
+    "ezone": "^0.20.0",
+    "o3": "^1.0.3"
   },
   "devDependencies": {
-    "jasmine": ">=2.2.0"
+    "browserify": "10.2.6",
+    "expect.js": "^0.3.1",
+    "karma": "^0.13.22",
+    "karma-browserify": "^5.0.2",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-ie-launcher": "^1.0.0",
+    "karma-mocha": "^0.2.2",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "mocha": "^2.4.5",
+    "phantomjs-prebuilt": "^2.1.5",
+    "sinon": "^1.17.3",
+    "watchify": "^3.7.0",
+    "yadda": "^0.17.2"
   }
 }
