--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dataflower",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "description": "DataFlower - The dataflow project",
   "keywords": [
     "DataFlower",
@@ -31,14 +31,16 @@
   "scripts": {
     "test": "npm run test-node & npm run test-karma",
     "test-node": "mocha --reporter spec yadda.js",
-    "test-karma": "karma start karma.conf.js"
+    "test-karma": "karma start karma.conf.js",
+    "examples": "node examples"
   },
   "dependencies": {
-    "ezone": "^0.20.0",
+    "ezone": "^0.20.1",
     "o3": "^1.0.3"
   },
   "devDependencies": {
     "browserify": "10.2.6",
+    "chalk": "^1.1.3",
     "expect.js": "^0.3.1",
     "karma": "^0.13.22",
     "karma-browserify": "^5.0.2",
